--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-around;
-    height: 5vh;
+    height: 8vh;
     font-size: 24px;
 }
 
@@ -22,9 +22,116 @@ nav {
     content: "";
 }
 
+
+
+
+
+
+
+/* MODAL SECTION! */
+.modal {
+    display: none; /* Hide the modal by default */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal-content {
+    background-color: rgb(255, 252, 203);
+    margin: 10% auto;
+    padding: 20px;
+    width: 85%;
+    border-radius: 8px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+form {
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.player-modal-container-parent {
+    display: flex;
+    justify-content: space-between;
+}
+
+.reset-submit-container {
+    display: flex;
+    justify-content: space-around;
+}
+
+.reset-submit-container > button {
+    background-color:rgb(115, 39, 122);
+    color: whitesmoke;    
+    border: none;
+    padding: 14px 20px;
+    font-size: 16px;
+    border-radius: 8px;
+    font-size: larger;
+}
+/* MODAL SECTION END! */
+
+
+
+
+
+
+
+#player-section {
+    display: flex;
+    /* justify-content: space-around;
+    align-items: center; */
+    height: 12vh;
+}
+
+.player-subsection {
+    border: 1px solid peru;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+#player-1-section {
+    background-color: rgb(255, 180, 180);
+
+}
+
+#draw-section {
+    background-color: rgb(194, 255, 194);
+}
+
+#player-2-section {
+    background-color: rgb(196, 196, 255);
+}
+
+
 #body-container {
     border: 2px solid rgb(83, 131, 91);
-    height: 94vh;
+    height: 78vh;
     display: grid;
     align-items: center;
     justify-content: center;
@@ -32,8 +139,8 @@ nav {
 
 #board-container {
     border: 4px solid red;
-    width: 60vw;
-    height: 60vh;
+    /* width: 60vw;
+    height: 60vh; */
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     border-radius: 8px;
@@ -43,7 +150,8 @@ nav {
 
 .board-tile {
     border: 1px solid blue;
-    height: 100%;
+    height: 130px;
+    width: 180px;
     display: flex;
     justify-content: center;
     align-items: center;
